Run the tests on this branch too

--- a/.github/workflows/python-lint-and-test.yml
+++ b/.github/workflows/python-lint-and-test.yml
@@ -5,9 +5,9 @@ name: Python package
 
 on:
   push:
-    branches: [ live ]
+    branches: [ live,  workflow-lint-and-test ]
   pull_request:
-    branches: [ live ]
+    branches: [ live,  workflow-lint-and-test ]
 
 jobs:
   build:
